--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hello World
+title: 东小侠
 subtitle: 怕什么真理无穷 进一寸有进一寸的欢喜
 description: 怕什么真理无穷 进一寸有进一寸的欢喜
 author: 东小侠
