--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -6,7 +6,7 @@
 favicon: /favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "Hexo, NexT"
+keywords: "dongxiaoxia, 东小侠, Hexo, NexT"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -14,9 +14,9 @@ keywords: "Hexo, NexT"
 rss:
 
 # Specify the date when the site was setup
-#since: 2015
+since: 2015
 
-
+favicon: images/favicon.ico
 
 
 # ---------------------------------------------------------------
@@ -27,11 +27,12 @@ rss:
 menu:
   home: /
   categories: /categories
-  about: /about
   archives: /archives
   tags: /tags
-  commonweal: /404.html
-  something:
+  #commonweal: /404.html
+  about: /about
+  resume: /resume
+  something: /something
 
 # Enable/Disable menu icons.
 # Icon Mapping:
@@ -46,7 +47,8 @@ menu_icons:
   categories: th
   tags: tags
   archives: archive
-  commonweal: heartbeat
+  #commonweal: heartbeat
+  resume: book
   something: flash
 
 
@@ -73,7 +75,7 @@ font:
   enable: true
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default)
-  host:
+  host: //fonts.useso.com
 
   # Global font settings used on <body> element.
   global:
@@ -119,8 +121,8 @@ font:
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
   #LinkLabel: Link
-  github: https://github.com/dongxiaoxia
-  zhihu: https://www.zhihu.com/people/dong-xiao-xia
+  GitHub: https://github.com/dongxiaoxia
+  知乎: https://www.zhihu.com/people/dong-xiao-xia
 
 # Social Links Icons
 # Icon Mapping:
@@ -203,16 +205,14 @@ scroll_to_more: true
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
   enable: true
-  length: 150
-
+  length: 200
 
 # Wechat Subscriber
-#wechat_subscriber:
-  #enabled: true
-  #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  #description: ex. subscribe to my blog by scanning my public wechat account
-
-
+wechat_subscriber:
+  enabled: true
+  qcode: /images/wechat-qcode.jpg
+  description: 欢迎您扫一扫上面的微信公众号，订阅我的博客！
+  
   
 
 # ---------------------------------------------------------------
@@ -226,7 +226,7 @@ mathjax:
 
 
 # Swiftype Search API Key
-#swiftype_key:
+swiftype_key: LEW-HJ8C4q4d2iL3MKNA
 
 # Baidu Analytics ID
 #baidu_analytics:
@@ -267,8 +267,8 @@ mathjax:
 # you can visit http://dev.duoshuo.com get duoshuo user id.
 duoshuo_info:
   ua_enable: true
-  admin_enable: false
-  user_id: 0
+  admin_enable: true
+  user_id: 6276589648156296000
   #admin_nickname: Author
 
 
@@ -296,36 +296,26 @@ busuanzi_count:
   enable: true
   # custom uv span for the whole site
   site_uv: true
-  site_uv_header: <i class="fa fa-user"></i>
-  site_uv_footer: 
+  site_uv_header: <i class="fa fa-user"></i>本站访客数
+  site_uv_footer: 人次
   # custom pv span for the whole site
   site_pv: true
-  site_pv_header: <i class="fa fa-eye"></i>
-  site_pv_footer: 
+  site_pv_header: <i class="fa fa-eye"></i>本站总访问量
+  site_pv_footer: 次
   # custom pv span for one page only
-  page_pv: true
+  page_pv: false
   page_pv_header: <i class="fa fa-file-o"></i>
   page_pv_footer: 
 
 # Tencent analytics ID
-# tencent_analytics:
+tencent_analytics: 55879611
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO
 baidu_push: false
 
-reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
+reward_comment: 我知道是不会有人点的，但万一有人想不开呢？
 wechatpay: /images/weixin.jpg
 alipay: /images/zhifubao.jpg
-
-# Wechat Subscriber
-wechat_subscriber:
-  enabled: true
-  qcode: /images/wechat-qcode.jpg
-  description: 欢迎您扫一扫上面的微信公众号，订阅我的博客！
-  
-since: 2015
-
-tencent_analytics : 55879611
 
 duoshuo_hotartical: true
 
