修改首页上热度显示不对的bug

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -284,10 +284,10 @@ facebook_sdk:
 
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
-leancloud_visitors:
-  enable: true
-  app_id: eNfNM1dz39uvzdbHhXaoGjMi-gzGzoHsz
-  app_key: pbRRB2CfUCQ8d29wGvyI8Wpj
+#leancloud_visitors:
+#  enable: true
+#  app_id: eNfNM1dz39uvzdbHhXaoGjMi-gzGzoHsz
+ # app_key: pbRRB2CfUCQ8d29wGvyI8Wpj
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
